--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint": "8.0.0",
+    "eslint": "^8.0.0",
     "isomorphic-unfetch": "^3.1.0",
     "next": "^11.1.2",
     "react": "^17.0.2",
